main page prev finished;

--- a/index.html
+++ b/index.html
@@ -153,6 +153,11 @@
         бесплатный Wi-Fi, ресторан и кафетерий, конференц-зал, охраняемая бесплатная парковка, прачечная, салон красоты,
         парикмахерская, стоматологический кабинет.
       </p>
+      <div class="imageContainer">
+        <picture class=".articlePhoto">
+          <img src="Main/_100.jpg" alt="RoomExample" />
+        </picture>
+      </div>
       <p lang="ru">
         <span class="linkedP vacancies">Наши сотрудники</span> всегда готовы помочь вам и ответить на любые вопросы,
         связанные с бизнесом, туристическими маршрутами или местами отдыха в Костанае. Мы принимаем оплату за проживание
