--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <div id="headerInfo">
         <i lang="ru"
           ><span class="mapLink"
-            >Республика Казахстан<br />г. Костанай, <span class="avoidWrap">ул. Батурсынова, 95</span></span
+            ><span class="compass">&#129517;</span>Республика Казахстан<br />г. Костанай,
+            <span class="avoidWrap">ул. Батурсынова, 95</span></span
           ><br /><a href="tel:+77076343424"><span class="emoji">&#128222;</span>+7 (707) 634 34 24</a><br />
           <a href="tel:+77142544366"><span class="emoji">&#128222;</span>+7 (7142) 54 43 66</a></i
         >
@@ -197,6 +198,8 @@
           қорғалған тегін паркинг, прачечная, сауық салоны, жүзімдік орындары мен дәрігерлер бар.</i
         >
       </div>
+    </article>
+    <article>
       <h3 lang="ru">Наши преимущества</h3>
       <h3 lang="en">Our Advantages</h3>
       <h3 lang="kz">Біздің артықшылықтарымыз</h3>
